--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
           <div class="container">
             <div class="row">
             <div class="header">
-          <div class="header_menu">
+            <div class="header_menu">
             <a href="#">Blog</a>
             <a href="#">Github</a>
             <a href="#">Webstandard</a>
@@ -299,7 +299,7 @@
             <!-- //col5 -->
             <article class="column col6">
               <h4 class="col_tit">Video</h4>
-              <p class="col_desc">멍같은 월요일 ㅡㅡ</p>
+              <p class="col_desc">월요일이당</p>
               <!-- video -->
                   <!-- <video autoplay="autoplay" controls="controls" loop="loop">
                     <source src="img/video.mp4" type="video/mp4">
