--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
           <!-- //header menu -->
           <div class="header_tit">
               <h1>Professional Web Publisher</h1><br>
-              <a href="http://webstoryboy.co.kr">webstoryboy.co.kr</a>
+              <a href="github.com/Donghyun-git">Donghyun-git</a>
           </div>
           <!-- //header_tit -->
           <div class="header_icon">
@@ -256,19 +256,19 @@
                     <div>
                       <figure>
                         <img src="img/slider001.jpg" alt="이미지1">
-                        <figcaption><em>만들기 힘들었다</em><span>저절로 넘어가짐 이제</span></figcaption>
+                        <figcaption><em>미디어쿼리</em><span>반응형 웹사이트</span></figcaption>
                       </figure>
                     </div>
                     <div>
                       <figure>
                         <img src="img/slider001.jpg" alt="이미지2">
-                        <figcaption><em>모바일에서도 반응하는</em><span>반응형 사이트</span></figcaption>
+                        <figcaption><em>미디어쿼리</em><span>반응형 웹사이트</span></figcaption>
                       </figure>
                     </div>
                     <div>
                       <figure>
                         <img src="img/slider001.jpg" alt="이미지3">
-                        <figcaption><em>아이폰도 되지롱</em><span>화면이 저절로 넘어가지롱</span></figcaption>
+                        <figcaption><em>미디어쿼리</em><span>반응형 웹사이트</span></figcaption>
                       </figure>
                     </div>
                   </div>
